# codetanks-battlemaster

./: .gitignore  README.rst  dagger.json  main.py  pyproject.toml
.config/mise/: config.toml
.config/mise/tasks/: update-python-version.py
.dagger/: pyproject.toml
.dagger/src/: dagger_gen.py
.dagger/src/codetanks_battlemaster/: __init__.py  main.py
.github/workflows/: main.yaml
battlemaster/: __main__.py  app_supervisor.py  config.py
battlemaster/asgi/: __init__.py  probes.py
battlemaster/k8s/: crd.py
battlemaster/k8s/models/: battle.py  tank.py
battlemaster/k8s/resources/: battle.py  tank.py
battlemaster/reconcilers/: battle.py
battlemaster/servers/: __init__.py  informer.py  manager.py  types.py
deploy/: application.yaml.j2  configmap.yaml
hack/: battle-test.yaml
