[project]
name = "codetanks-battlemaster"
version = "0.1.0"
description = "Codetanks BattleMaster"
readme = "README.rst"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dc-schema>=0.0.8",
    "hypercorn>=0.17.3",
    "lightkube>=0.17.1",
    "pyaml>=25.1.0",
    "pyyaml>=6.0.2",
    "triotp>=0.2.1",
]

[project.scripts]
crd = "battlemaster.k8s.crd:main"


[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["battlemaster"]

[tool.uv.sources]
triotp = { path = "../../other/linkdd/triotp" }
